--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "email": "hello@jonsuh.com",
     "url": "https://jonsuh.com"
   },
-  "main": "stylesheets/_mq.scss",
+  "main": "index.js",
+  "eyeglass": {
+    "needs": "*",
+    "exports": "eyeglass-exports.js"
+  },
   "keywords": [
     "breakpoints",
     "css",
